--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^20.3.1",
     "@angular/platform-browser-dynamic": "^20.3.1",
     "@angular/router": "^20.3.1",
+    "@angular/service-worker": "^20.3.1",
     "@capacitor/app": "7.0.2",
     "@capacitor/core": "7.4.3",
     "@capacitor/haptics": "7.0.2",
