--- a/angular.json
+++ b/angular.json
@@ -43,6 +43,11 @@
                 "glob": "manifest.webmanifest",
                 "input": "src",
                 "output": "./"
+              },
+              {
+                "glob": "firebase-messaging-sw.js",
+                "input": "src",
+                "output": "./"
               }
             ],
             "styles": ["src/global.scss", "src/theme/variables.scss"],
@@ -126,6 +131,11 @@
               },
               {
                 "glob": "manifest.webmanifest",
+                "input": "src",
+                "output": "./"
+              },
+              {
+                "glob": "firebase-messaging-sw.js",
                 "input": "src",
                 "output": "./"
               }
